fixed padding on smaller screens

--- a/user-tracker/components/Home.module.css
+++ b/user-tracker/components/Home.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
 
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   padding: 2em;
   font-size: 1.5em;
